vendor/thiserror-1.0.24/tests/ui/source-struct-not-error.stderr
error[E0599]: the method `as_dyn_error` exists for struct `NotError`, but its trait bounds were not satisfied
 --> $DIR/source-struct-not-error.rs:9:5
  |
4 | struct NotError;
  | ----------------
  | |
  | method `as_dyn_error` not found for this
  | doesn't satisfy `NotError: AsDynError`
  | doesn't satisfy `NotError: std::error::Error`
...
9 |     source: NotError,
  |     ^^^^^^ method cannot be called on `NotError` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `NotError: std::error::Error`
          which is required by `NotError: AsDynError`
